13 October 2010: Wouter
	- Fix TCP so it uses a random outgoing-interface.

11 October 2010: Wouter
	- Fix bug when DLV below a trust-anchor that uses NSEC3 optout where
	  the zone has a secure delegation hosted on the same server did not
	  verify as secure (it was insecure by mistake).
	- iana portlist updated.
	- ldns tarball updated (for reading cachedumps with bad RR data).

1 October 2010: Wouter
	- test for unbound-anchor. fix for reading certs.
	- Fix alloc_reg_release for longer uptime in out of memory conditions.

28 September 2010: Wouter
	- unbound-anchor working, it creates or updates a root.key file.
	  Use it before you start the validator (e.g. at system boot time).

27 September 2010: Wouter
	- iana portlist updated.

24 September 2010: Wouter
	- bug#329: in example.conf show correct ipv4 link-local 169.254/16.

23 September 2010: Wouter
	- unbound-anchor app, unbound requires libexpat (xml parser library).

22 September 2010: Wouter
	- compliance with draft-ietf-dnsop-default-local-zones-14, removed
	  reverse ipv6 orchid prefix from builtin list.
	- iana portlist updated.

17 September 2010: Wouter
	- DLV has downgrade protection again, because the RFC says so.
	- iana portlist updated.

16 September 2010: Wouter
	- Algorithm rollover operational reality intrudes, for trust-anchor,
	  5011-store, and DLV-anchor if one key matches it's good enough.
	- iana portlist updated.
	- Fix reported validation error in out of memory condition.

15 September 2010: Wouter
	- Abide RFC5155 section 9.2: no AD flag for replies with NSEC3 optout.

14 September 2010: Wouter
	- increased mesh-max-activation from 1000 to 3000 for crazy domains
	  like _tcp.slb.com with 262 servers.
	- iana portlist updated.

13 September 2010: Wouter
	- bug#327: Fix for cannot access stub zones until the root is primed.

9 September 2010: Wouter
	- unresponsive servers are not completely blacklisted (because of
	  firewalls), but also not probed all the time (because of the request